[metadata]
name = bendev
version = 0.0.6
url = https://github.com/BenthamInstruments/bendev
description = Control module for Bentham Instruments Ltd SCPI devices
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
classifiers =
        Development Status :: 3 - Alpha
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3 :: Only
        License :: OSI Approved :: MIT License
        Operating System :: MacOS :: MacOS X
        Operating System :: Microsoft :: Windows
        Operating System :: POSIX
        Topic :: System :: Hardware :: Hardware Drivers
        Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Human Interface Device (HID)
        Intended Audience :: Science/Research

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    hidapi
